<resources>
    <string name="app_name">PlantApp</string>
    <string name="welcome_back">PLANT APP</string>
    <string name="login_to_continue">Добро пожаловать в</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="create_new_account">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="add_image">Изображение</string>
    <string name="name">Имя</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="select_user">Выберите собеседника</string>
    <string name="type_a_message">Сообщение</string>
    <string name="online">В сети</string>
    <string name="add_chat">Добавить чат</string>
    <string name="description">Описание:</string>
    <string name="ltName">Латинское название:</string>
    <string name="fact">Занимательный факт:</string>
    <string name="characteristics">Характеристики:</string>
    <string name="lifeExp">Продолжительность жизни:</string>
    <string name="floweringTime">Время цветения:</string>
    <string name="plantHeight">Высота растения:</string>
    <string name="flowerColor">Цвет цветка:</string>
    <string name="leafColor">Цвет листьев:</string>
    <string name="watering">Полив:</string>
    <string name="topDressing">Подкормка:</string>
    <string name="pruning">Обрезка:</string>
    <string name="soil">Почва:</string>
    <string name="light">Свет:</string>
    <string name="temperature">Температура:</string>
    <string name="phylum">Отдел:</string>
    <string name="clas">Класс:</string>
    <string name="order">Порядок:</string>
    <string name="family">Семейство:</string>
    <string name="genus">Род:</string>
    <string name="species">Вид:</string>
    <string name="science">Научная классификация:</string>
    <string name="version_app">version 1.0</string>
    <string name="newNews">Создать пост</string>
    <string name="publish">Опубликовать</string>
    <string name="text">Текст</string>
    <string name="back">Назад к постам</string>
    <string name="my_plants">Мои растения</string>
    <string name="add">Добавить</string>
    <string name="addNot">Добавить напоминание</string>
    <string name="add_orang">Добавить в свою оранжерею</string>
    <string name="confirmation">Подтверждение</string>
    <string name="question">Вы уверены, что хотите выполнить это действие?</string>
    <string name="disease">Болезни:</string>

</resources>