<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerFavorite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cadet_blue"
    tools:context=".FavoriteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:text="@string/my_plants"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addPlant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="onClickAdd"
                    android:layout_marginBottom="15dp"
                    android:text="@string/add" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="false">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcViewFavorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navViewFavorite"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/teal"
        android:fitsSystemWindows="true"
        android:paddingEnd="15dp"
        app:headerLayout="@layout/nav_header_main"
        app:itemBackground="@drawable/drawer_selected_item"
        app:itemIconTint="@color/drawer_item_color"
        app:itemTextColor="@color/drawer_item_color"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_navigation_drawer"
        tools:ignore="RtlSymmetry">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/version_app"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>